# ik-performance-test

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindRBDL.cmake  FindqpOASES.cmake
data/model/urdf/: atlas_v5_raw.urdf  robotis_op2.urdf
docker/: Dockerfile  docker-compose.yml
include/CSV/: Map.hpp  Parser.hpp
include/IKBenchmark/: BenchmarkFileIO.hpp  IKBenchmark.hpp
include/IKBenchmark/Squat6D/: Case1.hpp  Case2.hpp  Case3.hpp  Case4.hpp  Squat6D.hpp  Squat6DBenchmark.hpp  SquatMotion.hpp
include/IKL/: IKL.hpp  NumericIK.hpp  Parameters.hpp  ResultStatus.hpp
include/IKL/Constraint/: Constraint.hpp  Set.hpp  SetList.hpp  UnitType.hpp
include/IKL/Kinematic/: CartesianPoint.hpp  EulerAngle.hpp  JointState.hpp  Kinematic.hpp  KinematicUnitBase.hpp
include/IKL/Math/: Math.hpp  Matrix.hpp  Vector.hpp
include/IKL/Model/: Model.hpp  RBDL.hpp
include/IKL/Solver/: GaussNewton.hpp  GaussNewtonQR.hpp  GaussNewtonSVD.hpp  JacobianTranspose.hpp  LeastSquares.hpp  LeastSquaresQR.hpp  LevenbergMarquardtED.hpp  LevenbergMarquardtSRC.hpp  LevenbergMarquardtSRM.hpp  LevenbergMarquardtSu.hpp  QProblemGNByOsqp.hpp  QProblemGNByqpOASES.hpp  QProblemLMByOsqp.hpp  QProblemLMByqpOASES.hpp  Solver.hpp
src/: CMakeLists.txt  multiple_ik_benchmark.cpp
src/CSV/: CMakeLists.txt  Map.cpp  Parser.cpp
src/IKBenchmark/: BenchmarkFileIO.cpp  CMakeLists.txt
src/IKBenchmark/Squat6D/: Case1.cpp  Case2.cpp  Case3.cpp  Case4.cpp  Squat6DBenchmark.cpp  SquatMotion.cpp
src/IKL/: CMakeLists.txt
src/IKL/Model/: CMakeLists.txt  RBDL.cpp
src/IKL/Solver/: GaussNewton.cpp  GaussNewtonQR.cpp  GaussNewtonSVD.cpp  JacobianTranspose.cpp  LeastSquares.cpp  LeastSquaresQR.cpp  LevenbergMarquardtED.cpp  LevenbergMarquardtSRC.cpp  LevenbergMarquardtSRM.cpp  LevenbergMarquardtSu.cpp  QProblemGNByOsqp.cpp  QProblemGNByqpOASES.cpp  QProblemLMByOsqp.cpp  QProblemLMByqpOASES.cpp
